<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    >

    <View
        android:id="@+id/cuadroTitulo"
        android:layout_width="200dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:background="@color/backgroundB"
        />

    <TextView
        android:id="@+id/textoTitulo"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/calculadora_de_sueldo"
        app:layout_constraintBottom_toBottomOf="@+id/cuadroTitulo"
        app:layout_constraintEnd_toEndOf="@+id/cuadroTitulo"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/cuadroTitulo"
        app:layout_constraintTop_toTopOf="@+id/cuadroTitulo" />

    <View
        android:id="@+id/view"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@color/backgroundB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        />

    <TextView
        android:id="@+id/textoSueldoBruto"
        android:layout_width="170dp"
        android:layout_height="20dp"
        android:text="@string/salario_bruto_anual"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <EditText
        android:id="@+id/sueldoBrutoAnual"
        android:inputType="number"
        android:layout_width="180dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:hint="@string/salario_bruto_anual1"/>

    <View
        android:id="@+id/view2"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@color/backgroundB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textoPagas"
        android:layout_width="170dp"
        android:layout_height="20dp"
        android:text="@string/numero_de_pagas"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintTop_toTopOf="@id/view2" />

    <EditText
        android:id="@+id/numeroPagas"
        android:inputType="number"
        android:layout_width="180dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:hint="@string/numero_de_pagas"/>

    <View
        android:id="@+id/view3"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@color/backgroundB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/edadTexto"
        android:layout_width="170dp"
        android:layout_height="20dp"
        android:text="@string/edad"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@id/view3"
        app:layout_constraintTop_toTopOf="@id/view3" />

    <EditText
        android:id="@+id/edad"
        android:inputType="number"
        android:layout_width="180dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:hint="@string/edad"/>

    <View
        android:id="@+id/view4"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@color/backgroundB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textoGrupoProf"
        android:layout_width="170dp"
        android:layout_height="20dp"
        android:text="@string/grupo_profesional"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@id/view4"
        app:layout_constraintTop_toTopOf="@id/view4" />

    <EditText
        android:id="@+id/grupoProfesional"
        android:inputType="number"
        android:layout_width="180dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:hint="@string/grupo_profesional"/>

    <View
        android:id="@+id/view5"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@color/backgroundB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textoGradoDiscapacidad"
        android:layout_width="170dp"
        android:layout_height="20dp"
        android:text="@string/grado_de_discapacidad"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@id/view5"
        app:layout_constraintTop_toTopOf="@id/view5" />

    <EditText
        android:id="@+id/gradoDiscapacidad"
        android:inputType="number"
        android:layout_width="180dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:hint="@string/grupo_profesional"/>

    <View
        android:id="@+id/view6"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@color/backgroundB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/textoEstadoCivil"
        android:layout_width="170dp"
        android:layout_height="20dp"
        android:text="@string/estado_civil"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toBottomOf="@id/view6"
        app:layout_constraintTop_toTopOf="@id/view6" />

    <EditText
        android:id="@+id/estadoCivil"
        android:inputType="text"
        android:layout_width="180dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:hint="@string/estado_civil"/>

    <View
        android:id="@+id/view7"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@color/backgroundB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textoNumeroHijos"
        android:layout_width="170dp"
        android:layout_height="20dp"
        android:text="@string/n_mero_de_hijos"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@id/view7"
        app:layout_constraintTop_toTopOf="@id/view7" />

    <EditText
        android:id="@+id/hijos"
        android:inputType="number"
        android:layout_width="180dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:hint="@string/n_mero_de_hijos"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enviar"
        android:layout_width="100dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        android:background="@color/white"
        android:text="ENVIAR"
        />


</androidx.constraintlayout.widget.ConstraintLayout>